# prediction_competition_2023

./: .gitignore  BenchmarkModelGeneration.ipynb  BenchmarkModels.py  Benchmark_models.ipynb  Benchmark_reconstructed.ipynb  CompetitionEvaluation.py  Ensembling.py  IgnoranceScore.py  IntervalScore.py  PresentAndEvaluateBenchmarks.ipynb  README.md  benchmark.py  bootstrap_.py  clean_submissions.py  collect_performance.py  conda-lock.yml  ensemble.py  environment.yml  evaluate_submissions.py  final_plot.ipynb  make_ensemble.py  pg2nga.py  plotting.py  point-to-bootstrap.ipynb  point-to-samples.py  postprocess.py  pyproject.toml  resample_predictions.py  test_compliance.py  utilities.py
.github/ISSUE_TEMPLATE/: bug_report.md
.ipynb_checkpoints/: Benchmark_models-checkpoint.ipynb
