[tool.poetry]
name = "my project"
version = "0.1.0"
description = "A short description of my project"
authors = ["name <person@prio.org>"]
license = "Choose a license"
readme = "readme.md"

[tool.poetry.dependencies]
python = "~3.10"
nbsphinx = "^0.9.2"
furo = "^2023.7.26"
myst-parser = "^2.0.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-copybutton = "^0.5.2"
numpy = "^1.24"
pandas = "^2.1.0"
ipykernel = "^6.25.2"
sphinx = "^7.2.6"
ipython = "^8.15.0"
ipywidgets = "^8.1.1"
numba = "^0.57.1"
xskillscore = "^0.0.24"
pathlib = "^1.0.1"
pyyaml = "^6.0.1"
pyarrow = "^13.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
